backend/k8s/re-view-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: re-view-service
spec:
  ingressClassName: nginx
  rules:
    - host: api-re-view.angelzhang.dev
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: media-service
                port:
                  number: 80
          - path: /review
            pathType: Prefix
            backend:
              service:
                name: review-service
                port:
                  number: 80
